--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta charset="utf-8"/>
 
   <!-- Site Title-->
-  <title>Delex HTML5 Free Responsive Template | Template Stock</title>
+  <title>Tony Pool Services</title>
 
   <!-- Mobile Specific Metas-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
@@ -34,7 +34,7 @@
   <!-- Template Styles-->
   <link rel="stylesheet" href="css/style.css"/>
   <!-- Template Color-->
-  <link rel="stylesheet" type="text/css" href="css/green.css" media="screen" id="color-opt" />
+  <link rel="stylesheet" type="text/css" href="css/blue.css" media="screen" id="color-opt" />
 
 
 
@@ -324,33 +324,6 @@
     <!-- Scroll top -->
     <a href="#" class="back-to-top"> <i class="fa fa-chevron-up"> </i> </a>
 
-
-    <!-- Style switcher -->
-    <div id="style-switcher" style="left: 0px;">
-        <div>
-            <h3>Select your color</h3>
-            <ul class="pattern">
-                <li><a class="color1" href="#"></a></li>
-                <li><a class="color2" href="#"></a></li>
-                <li><a class="color3" href="#"></a></li>
-                <li><a class="color4" href="#"></a></li>
-                <li><a class="color5" href="#"></a></li>
-                <li><a class="color6" href="#"></a></li>
-                <li><a class="color7" href="#"></a></li>
-                <li><a class="color8" href="#"></a></li>
-                <li><a class="color9" href="#"></a></li>
-                <li><a class="color10" href="#"></a></li>
-                <li><a class="color11" href="#"></a></li>
-                <li><a class="color12" href="#"></a></li>
-            </ul>
-        </div>      
-        <div class="bottom">
-            <a href="#" class="settings"><i class="fa fa-refresh fa-spin"></i></a>
-        </div>
-    </div>
-    <!-- end Style switcher --> 
-
-
     <!-- JavaScript
      ================================================== -->
      <!-- Placed at the end of the document so the pages load faster -->
@@ -376,10 +349,6 @@
      <script type="text/javascript" src="js/owl.carousel.min.js"></script>
      <!-- App JS -->
      <script src="js/app.js"></script>
-
-     <!-- Switcher script for demo only -->
-    <script type="text/javascript" src="js/switcher.js"></script>
-
 
   </body>
 </html>
