Updates for company info
- Add map
- Update info

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta charset="utf-8"/>
 
   <!-- Site Title-->
-  <title>Tony Pool Services</title>
+  <title>Fat Boy Pool Services</title>
 
   <!-- Mobile Specific Metas-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
@@ -61,7 +61,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Delex</a>
+        <a class="navbar-brand" href="#">Fat Boy Pool Services</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,6 +71,7 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#twitter_tweet">Testimonials</a></li>
           <li><a href="#contact">Contact</a></li>
+          <li><a href="tel:858-123-1234">Call (858) 123-1234</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container -->
@@ -82,23 +83,26 @@
       <div class="home__header-content">
         <div id="main-home-carousel" class="owl-carousel">
           <div>
-            <h1 class="intro-title">Start your own project</h1>
-            <p class="intro-text">Lorem ipsum dolor sit amet consectetur adictum piscing elit fusce sit amet inerdum neque ultra icies <br/>  pelentesque tempor justo a scelerisque placerat sit amet magna e.</p>
-            <a class="btn btn-custom" href="#">Get started</a>
+            <h1 class="intro-title">Trusted Pool Services</h1>
+            <p class="intro-text">With over 25 Years of professional pool services we can help with your pool needs. <br/> Call or email us to learn more about how we can help you.</p>
           </div><!--slide item like paragraph-->
 
           <div>
-            <h1 class="intro-title">Best ideas for your Business</h1>
-            <p class="intro-text">Lorem ipsum dolor sit amet consectetur adictum piscing elit fusce sit amet inerdum neque ultra icies <br/>  pelentesque tempor justo a scelerisque placerat sit amet magna e.</p>
-            <a class="btn btn-custom" href="#">Get started</a>
+            <h1 class="intro-title">Serving Oceanside and San Diego Area</h1>
+            <p class="intro-text">We are the largest pool service team in the Oceanside, CA area.</p>
           </div><!--slide item like paragraph-->
 
           <div>
-            <h1 class="intro-title">We are digital expert</h1>
-            <p class="intro-text">Lorem ipsum dolor sit amet consectetur adictum piscing elit fusce sit amet inerdum neque ultra icies <br/>  pelentesque tempor justo a scelerisque placerat sit amet magna e.</p>
-            <a class="btn btn-custom" href="#">Get started</a>
+            <h1 class="intro-title">Emergency Support 24/7!</h1>
+            <p class="intro-text">Call anytime! <br/> Our team is ready to fix any pool emergencies you may have.</p>
+          </div><!--slide item like paragraph-->
+
+          <div>
+            <h1 class="intro-title">Servicing All Pool Types</h1>
+            <p class="intro-text">We service pools in all sizes and water types.</p>
           </div><!--slide item like paragraph-->
         </div>
+        <a class="btn btn-custom" href="#contact">Contact Us</a>
       </div>
     </section>
     <!-- /End HOME -->
@@ -108,7 +112,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h3 class="title text-center">Best Services</h3>
+            <h3 class="title text-center">Services</h3>
             <div class="titleHR"><span></span></div>
           </div>
         </div>
@@ -120,7 +124,7 @@
                 <div class="icon-border"> 
                   <i class="icon-design-graphic-tablet-streamline-tablet color-l-orange"></i> 
                 </div>
-                <h5>Creative Ideas</h5>
+                <h5>Cleaning</h5>
                 <p>Nulla vitae libero pharetra augue. Etiam porta malesuada magna mollis euismod consectetur sem urdom tempus porttitor.</p>
               </div>
             </div>
@@ -132,8 +136,8 @@
                 <div class="icon-border"> 
                   <i class="icon-design-pencil-rule-streamline color-l-blue"></i> 
                 </div>
-                <h5>Rapid Solution</h5>
-                <p>Nulla vitae libero pharetra augue. Etiam porta malesuada magna mollis euismod consectetur sem urdom tempus porttitor.</p>
+                <h5>Maintenance</h5>
+                <p>(Will update the icons) Nulla vitae libero pharetra augue. Etiam porta malesuada magna mollis euismod consectetur sem urdom tempus porttitor.</p>
               </div>
             </div>
           </div>
@@ -144,50 +148,13 @@
                 <div class="icon-border"> 
                   <i class="icon-speech-streamline-talk-user color-l-yellow"></i> 
                 </div>
-                <h5>Magic Touch</h5>
+                <h5>Repairs</h5>
                 <p>Nulla vitae libero pharetra augue. Etiam porta malesuada magna mollis euismod consectetur sem urdom tempus porttitor.</p>
               </div>
             </div>
           </div>
         </div> <!--/.row -->
 
-        <div class="row">
-          <div class="col-sm-4"> <!-- Service-item -->
-            <div class="text-center services-item">
-              <div class="col-wrapper">
-                <div class="icon-border"> 
-                  <i class="icon-settings-streamline-2 color-l-purple"></i> 
-                </div>
-                <h5>Creative Ideas</h5>
-                <p>Nulla vitae libero pharetra augue. Etiam porta malesuada magna mollis euismod consectetur sem urdom tempus porttitor.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-4"> <!-- Service-item -->
-            <div class="text-center services-item">
-              <div class="col-wrapper">
-                <div class="icon-border"> 
-                  <i class="icon-streamline-umbrella-weather color-l-pink"></i> 
-                </div>
-                <h5>Rapid Solution</h5>
-                <p>Nulla vitae libero pharetra augue. Etiam porta malesuada magna mollis euismod consectetur sem urdom tempus porttitor.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-4"> <!-- Service-item -->
-            <div class="text-center services-item">
-              <div class="col-wrapper">
-                <div class="icon-border"> 
-                  <i class="icon-caddie-shopping-streamline color-l-green"></i> 
-                </div>
-                <h5>Magic Touch</h5>
-                <p>Nulla vitae libero pharetra augue. Etiam porta malesuada magna mollis euismod consectetur sem urdom tempus porttitor.</p>
-              </div>
-            </div>
-          </div>
-        </div> <!--/.row -->
       </div> <!--/.container -->
     </section>
     <!-- / End services-->
@@ -226,6 +193,37 @@
       </div> <!-- container -->
     </section>
     <!-- End TWITTER TWEET -->
+
+    <!-- SERVICE AREA -->
+    <section id="service-area">
+      <div class="container">
+
+        <!-- SERVICE AREA HEADER -->
+        <div class="row">
+          <div class="col-md-12">
+            <h3 class="title text-center">Service Areas</h3>
+            <div class="titleHR"><span></span></div>
+          </div>
+        </div>
+        <!-- END SERVICE AREA HEADER -->
+
+        <!-- SERVICE AREA MAP -->
+        <div class="row">
+          <div class="col-md-12">
+            <div style="height:500px; width:100%; display:inline-block; overflow:hidden;">
+              <iframe src="https://www.google.com/maps/d/embed?mid=1V3KeAl7u2BbRufFnObEAM9B7EIw1jQlW&ehbc=2E312F"
+                      frameborder="0"
+                      height="100%"
+                      style="position:relative; top:-48px; border:none"></iframe>
+            </div>
+          </div>
+        </div>
+        <!-- END SERVICE AREA MAP -->
+
+      </div>
+    </section>
+    <!-- END SERVICE AREA -->
+
 
     <!-- CONTACT -->
     <section id="contact">
@@ -285,31 +283,15 @@
           <div class="row">
             <div class="col-sm-4 col-md-4">
               <div class="footer-content">
-                <h4>KEEP IN TOUCH</h4>
-                <div class="footer-socials">
-                  <a href="#"><i class="fa fa-facebook"></i></a>
-                  <a href="#"><i class="fa fa-google-plus"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-pinterest"></i></a>
-                </div>
+                <h4>FIND US ON YELP</h4>
+                  <a href="#"><i class="fa fa-yelp"></i></a>
               </div> <!-- end footer-content -->
             </div> <!-- end col-sm-4 -->
             <div class="col-sm-4 col-md-4">
               <div class="footer-content">
-                <h4>ADDRESS</h4>
-                <p>464 Newesta St<br>
-                Othervilla AB 6007, Other</p>
-                <p>+0 123-456-7890<br>
-                <a href="#">www.domain.com</a><br>
-                info@domain.com</p>
+                <h4>CALL TONY</h4>
+                <p>858-201-9751<br>
               </div> <!-- end footer-content -->
-            </div> <!-- end col-sm-4 -->
-            <div class="col-sm-4 col-md-4">
-              <div class="footer-content">
-                <h4>SUPPORT</h4>
-                <p>You need support? Visit our support forum and open tickets for you questions.</p>
-                <p><button type="button" class="btn btn-custom-sm">forum</button></p>
-              </div>  <!-- end footer-content -->   
             </div> <!-- end col-sm-4 -->
           </div> <!-- end row -->
         </div> <!-- container -->
