--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               <iframe src="https://www.google.com/maps/d/embed?mid=1V3KeAl7u2BbRufFnObEAM9B7EIw1jQlW&ehbc=2E312F"
                       frameborder="0"
                       height="100%"
-                      style="position:relative; top:-48px; border:none"></iframe>
+                      style="position:relative; top:-50px; border:none"></iframe>
             </div>
           </div>
         </div>
@@ -232,7 +232,24 @@
           <div class="col-md-12">
             <h3 class="title text-center">Contact Us</h3>
             <div class="titleHR"><span></span></div>
+            </div>
+        </div>
 
+        <!-- CALL INFO -->
+        <div class="row">
+          <div class="col-md-12">
+            <h4>Phone: <a href="tel:123-123-1234" style="color:blue;">(858) 123-1234</a></h4>
+          </div>
+        </div>
+
+        <!-- CONTACT FORM -->
+        <div class="row">
+          <div class="col-md-12">
+            <h4>Email:</h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
             <form role="form" name="ajax-form" id="ajax-form" action="php/contact.php" method="post" class="form-main">
               <div class="col-xs-12">
                 <div class="row">            
@@ -281,16 +298,14 @@
       <div class="footer-widgets-wrap">
         <div class="container text-center">    
           <div class="row">
-            <div class="col-sm-4 col-md-4">
+            <div class="col-sm-6 col-md-6">
               <div class="footer-content">
-                <h4>FIND US ON YELP</h4>
-                  <a href="#"><i class="fa fa-yelp"></i></a>
+                <h4><a href="#">FIND US ON YELP<i class="fa fa-yelp"></i></a> </h4>
               </div> <!-- end footer-content -->
             </div> <!-- end col-sm-4 -->
-            <div class="col-sm-4 col-md-4">
+            <div class="col-sm-6 col-md-6">
               <div class="footer-content">
-                <h4>CALL TONY</h4>
-                <p>858-201-9751<br>
+                <a><h4>CALL 858-201-9751 </h4></a>
               </div> <!-- end footer-content -->
             </div> <!-- end col-sm-4 -->
           </div> <!-- end row -->
