--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
 
           <div>
             <h1 class="intro-title">Emergency Support 24/7!</h1>
-            <p class="intro-text">Call anytime! <br/> Our team is ready to fix any pool emergencies you may have.</p>
+            <p class="intro-text">Call anytime! Our team is ready around the clock to help with any pool emergency.</p>
           </div><!--slide item like paragraph-->
 
           <div>
             <h1 class="intro-title">Servicing All Pool Types</h1>
-            <p class="intro-text">We service pools in all sizes and water types.</p>
+            <p class="intro-text">We service pools of all sizes and water types.</p>
           </div><!--slide item like paragraph-->
         </div>
         <a class="btn btn-custom" href="#contact">Contact Us</a>
