--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#twitter_tweet">Testimonials</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="tel:858-123-1234">Call (858) 123-1234</a></li>
+          <li><a href="tel:858-201-9751">Call (858) 201-9751</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container -->
@@ -122,10 +122,12 @@
             <div class="text-center services-item">
               <div class="col-wrapper">
                 <div class="icon-border"> 
-                  <i class="icon-design-graphic-tablet-streamline-tablet color-l-orange"></i> 
+                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="color-l-blue bi bi-bucket" viewBox="0 0 16 16">
+                      <path d="M2.522 5H2a.5.5 0 0 0-.494.574l1.372 9.149A1.5 1.5 0 0 0 4.36 16h7.278a1.5 1.5 0 0 0 1.483-1.277l1.373-9.149A.5.5 0 0 0 14 5h-.522A5.5 5.5 0 0 0 2.522 5zm1.005 0a4.5 4.5 0 0 1 8.945 0H3.527zm9.892 1-1.286 8.574a.5.5 0 0 1-.494.426H4.36a.5.5 0 0 1-.494-.426L2.58 6h10.838z"/>
+                    </svg>
                 </div>
                 <h5>Cleaning</h5>
-                <p>Nulla vitae libero pharetra augue. Etiam porta malesuada magna mollis euismod consectetur sem urdom tempus porttitor.</p>
+                <p>Our professional cleaning service keeps your pool sanitary and safe.</p>
               </div>
             </div>
           </div>
@@ -134,10 +136,14 @@
             <div class="text-center services-item">
               <div class="col-wrapper">
                 <div class="icon-border"> 
-                  <i class="icon-design-pencil-rule-streamline color-l-blue"></i> 
+                  <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="color-l-green bi bi-shield-plus" viewBox="0 0 16 16">
+                    <path d="M5.338 1.59a61.44 61.44 0 0 0-2.837.856.481.481 0 0 0-.328.39c-.554 4.157.726 7.19 2.253 9.188a10.725 10.725 0 0 0 2.287 2.233c.346.244.652.42.893.533.12.057.218.095.293.118a.55.55 0 0 0 .101.025.615.615 0 0 0 .1-.025c.076-.023.174-.061.294-.118.24-.113.547-.29.893-.533a10.726 10.726 0 0 0 2.287-2.233c1.527-1.997 2.807-5.031 2.253-9.188a.48.48 0 0 0-.328-.39c-.651-.213-1.75-.56-2.837-.855C9.552 1.29 8.531 1.067 8 1.067c-.53 0-1.552.223-2.662.524zM5.072.56C6.157.265 7.31 0 8 0s1.843.265 2.928.56c1.11.3 2.229.655 2.887.87a1.54 1.54 0 0 1 1.044 1.262c.596 4.477-.787 7.795-2.465 9.99a11.775 11.775 0 0 1-2.517 2.453 7.159 7.159 0 0 1-1.048.625c-.28.132-.581.24-.829.24s-.548-.108-.829-.24a7.158 7.158 0 0 1-1.048-.625 11.777 11.777 0 0 1-2.517-2.453C1.928 10.487.545 7.169 1.141 2.692A1.54 1.54 0 0 1 2.185 1.43 62.456 62.456 0 0 1 5.072.56z"/>
+                    <path d="M8 4.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V9a.5.5 0 0 1-1 0V7.5H6a.5.5 0 0 1 0-1h1.5V5a.5.5 0 0 1 .5-.5z"/>
+                  </svg>
                 </div>
+
                 <h5>Maintenance</h5>
-                <p>(Will update the icons) Nulla vitae libero pharetra augue. Etiam porta malesuada magna mollis euismod consectetur sem urdom tempus porttitor.</p>
+                <p>Our world-class team keeps you worry-free and your pool in tip-top shape.</p>
               </div>
             </div>
           </div>
@@ -146,10 +152,10 @@
             <div class="text-center services-item">
               <div class="col-wrapper">
                 <div class="icon-border"> 
-                  <i class="icon-speech-streamline-talk-user color-l-yellow"></i> 
+                  <i class="icon-settings-streamline-2 color-l-yellow"></i> 
                 </div>
                 <h5>Repairs</h5>
-                <p>Nulla vitae libero pharetra augue. Etiam porta malesuada magna mollis euismod consectetur sem urdom tempus porttitor.</p>
+                <p>Our 24/7 ready experts are here to help you get your pool back in order quickly.</p>
               </div>
             </div>
           </div>
@@ -206,6 +212,17 @@
           </div>
         </div>
         <!-- END SERVICE AREA HEADER -->
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+            <p class="text-center con_sub_text">
+              We commit to provide the highest quality service for our
+              customers. To ensure the highest quality satisfaction we may
+              limit our services to the Oceanside, CA and Northern San Diego,
+              CA areas. Regardless in you're in our outlined service ares,
+              please contact us to learn more about how we can help your needs.
+            </p>
+          </div>
+        </div>
 
         <!-- SERVICE AREA MAP -->
         <div class="row">
@@ -238,7 +255,8 @@
         <!-- CALL INFO -->
         <div class="row">
           <div class="col-md-12">
-            <h4>Phone: <a href="tel:123-123-1234" style="color:blue;">(858) 123-1234</a></h4>
+            <h4>Phone: <a href="tel:858-201-0751" 
+                          style="color:blue;">(858) 201-9751</a></h4>
           </div>
         </div>
 
@@ -271,11 +289,6 @@
                     <div class="error" id="err-message" style="display: none;">Please enter message</div>
                   </div>
                 </div> 
-                <div class="row">
-                  <div class="col-md-8 col-md-offset-2">
-                    <p class="text-center con_sub_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren.</p>
-                  </div>
-                </div>
                 <div class="row">            
                   <div class="col-xs-12 text-center">
                     <div id="ajaxsuccess">E-mail was successfully sent.</div>
@@ -305,7 +318,7 @@
             </div> <!-- end col-sm-4 -->
             <div class="col-sm-6 col-md-6">
               <div class="footer-content">
-                <a><h4>CALL 858-201-9751 </h4></a>
+                <h4><a>CALL (858) 201-9751</a></h4>
               </div> <!-- end footer-content -->
             </div> <!-- end col-sm-4 -->
           </div> <!-- end row -->
