--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#twitter_tweet">Testimonials</a></li>
+          <li><a href="#service_area">Service Areas</a></li>
           <li><a href="#contact">Contact</a></li>
           <li><a href="tel:858-201-9751">Call (858) 201-9751</a></li>
         </ul>
@@ -173,25 +174,29 @@
           <div class="col-md-8 col-md-offset-2 text-center">
             <div id="testi-carousel" class="owl-carousel owl-spaced">
               <div>
-                <i class="fa fa-twitter"></i>
+                <i class="fa"></i>
                 <h5>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, dolorum, fugiat, eligendi magni quibusdam iure cupiditate ex voluptas unde Lorem ipsum dolor sit amet..
+                  Tony has maintained my pool for the last 7 years and I have
+                  not had any problems I highly recommend his services to 
+                  all pool owners!
                 </h5>
-                <p>- Jonathan Deo</p>
+                <p>- Nathan</p>
               </div><!--testimonials item like paragraph-->
               <div>
-                <i class="fa fa-twitter"></i>
+                <i class="fa"></i>
                 <h5>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, dolorum, fugiat, eligendi magni quibusdam iure cupiditate ex voluptas unde Lorem ipsum dolor sit amet..
+                  Our pool pump needed replacing and they fixed our pool at a
+                  fair price. We've worked with many other pool services before
+                  and none have had been this painless.
                 </h5>
-                <p>- Jonathan Deo</p>
+                <p>- Brittanie</p>
               </div><!--testimonials item like paragraph-->
               <div>
-                <i class="fa fa-twitter"></i>
+                <i class="fa"></i>
                 <h5>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, dolorum, fugiat, eligendi magni quibusdam iure cupiditate ex voluptas unde Lorem ipsum dolor sit amet..
+                  Friendly, professional and easy to work with.
                 </h5>
-                <p>- Jonathan Deo</p>
+                <p>- Lauren</p>
               </div><!--testimonials item like paragraph-->
             </div>
           </div> <!-- end col-md-8 -->
@@ -201,7 +206,7 @@
     <!-- End TWITTER TWEET -->
 
     <!-- SERVICE AREA -->
-    <section id="service-area">
+    <section id="service_area">
       <div class="container">
 
         <!-- SERVICE AREA HEADER -->
