--- a/index.html
+++ b/index.html
@@ -222,11 +222,9 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <p class="text-center con_sub_text">
-              We commit to provide the highest quality service for our
-              customers. To ensure the your satisfaction we may
-              limit our services to the Oceanside, CA and Northern San Diego,
-              CA areas. Even in you're outside our outlined service ares,
-              please contact us to learn more about how we can help your needs.
+              We are committed to serving the Oceanside, CA, and Northern San
+              Diego, CA areas. Even in you're outside our service areas,
+              contact us to learn more about how we can help your needs.
             </p>
           </div>
         </div>
