--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div id="main-home-carousel" class="owl-carousel">
           <div>
             <h1 class="intro-title">Trusted Pool Services</h1>
-            <p class="intro-text">With over 25 Years of professional pool services we can help with your pool needs. <br/> Call or email us to learn more about how we can help you.</p>
+            <p class="intro-text">With over 25 Years of professional pool services we can help with any of your pool maintenance needs.<br/> Call or email us to learn more about how we can help you.</p>
           </div><!--slide item like paragraph-->
 
           <div>
@@ -182,7 +182,7 @@
                   not had any problems I highly recommend his services to 
                   all pool owners!
                 </h5>
-                <p>- Nathan</p>
+                <p>- Nathan O.</p>
               </div><!--testimonials item like paragraph-->
               <div>
                 <i class="fa"></i>
@@ -191,14 +191,14 @@
                   fair price. We've worked with many other pool services before
                   and none have had been this painless.
                 </h5>
-                <p>- Brittanie</p>
+                <p>- Brittanie A.</p>
               </div><!--testimonials item like paragraph-->
               <div>
                 <i class="fa"></i>
                 <h5>
                   Friendly, professional and easy to work with.
                 </h5>
-                <p>- Lauren</p>
+                <p>- Lauren S.</p>
               </div><!--testimonials item like paragraph-->
             </div>
           </div> <!-- end col-md-8 -->
@@ -236,7 +236,7 @@
               <iframe src="https://www.google.com/maps/d/embed?mid=1V3KeAl7u2BbRufFnObEAM9B7EIw1jQlW&ehbc=2E312F"
                       frameborder="0"
                       height="100%"
-                      style="position:relative; top:-50px; border:none"></iframe>
+                      style="position:relative; top:-55px; border:none"></iframe>
             </div>
           </div>
         </div>
@@ -324,7 +324,7 @@
           <div class="row">
             <div class="col-sm-6 col-md-6">
               <div class="footer-content">
-                <h4><a href="#">FIND US ON YELP<i class="fa fa-yelp"></i></a> </h4>
+                <h4><a href="https://www.yelp.com/biz/fat-boy-pool-services-san-diego">FIND US ON YELP<i class="fa fa-yelp"></i></a> </h4>
               </div> <!-- end footer-content -->
             </div> <!-- end col-sm-4 -->
             <div class="col-sm-6 col-md-6">
