--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
           <div>
             <h1 class="intro-title">Serving Oceanside and San Diego Area</h1>
-            <p class="intro-text">We are the largest pool service team in the Oceanside, CA area.</p>
+            <p class="intro-text">We are the largest pool service team in the Oceanside, CA area and are growing our team <br/> to reach more and more of the San Diego areas.</p>
           </div><!--slide item like paragraph-->
 
           <div>
